--- a/index.html
+++ b/index.html
@@ -13,17 +13,11 @@
 </head>
 
 <body>
-  <div class="slide" id="makeImg">
-    <img src="image/Rectangle 1.png" alt="">
-    <img src="image/Rectangle 2.png" alt="">
-    <img src="image/Rectangle 3.png" alt="">
-    <img src="image/Rectangle 4.png" alt="">
-    <img src="image/Rectangle 5.png" alt="">
-  </div>
+
 
   <header>
     <nav>
-      <a href="#" class="open-logo">
+      <a href="index.html" class="open-logo">
         <img src="image/logo-nav.png" alt="" />
       </a>
       <ul class="menu">
@@ -55,6 +49,13 @@
   </header>
 
   <main>
+    <div class="slide" id="makeImg">
+      <img src="image/Rectangle 1.png" alt="">
+      <img src="image/Rectangle 2.png" alt="">
+      <img src="image/Rectangle 3.png" alt="">
+      <img src="image/Rectangle 4.png" alt="">
+      <img src="image/Rectangle 5.png" alt="">
+    </div>
     <div class="container home" id="home">
       <p class="top-text">長崎　カメラマン、フォトグラファー　仲地俊裕</p>
       <div class="inner">
