--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>original</title>
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" type="text/css"
@@ -36,8 +36,8 @@
         </li>
       </ul>
       <ul class="address">
-        <li>TEL.080-5182-5503</li>
-        <li>info@nakachiphoto.com</li>
+        <li>TEL.xxx-xxxx-xxxx</li>
+        <li>info@xxxxxxxx.com</li>
       </ul>
     </nav>
     <div class="toggle-btn">
@@ -57,7 +57,7 @@
       <img src="image/Rectangle 5.png" alt="">
     </div>
     <div class="container home" id="home">
-      <p class="top-text">長崎　カメラマン、フォトグラファー　仲地俊裕</p>
+      <p class="top-text">xxxxxxxx</p>
       <div class="inner">
         <div class="top-logo">
           <a href="index.html"><img src="image/logo-toppage.png" alt="" /></a>
@@ -77,7 +77,7 @@
   </main>
 
   <footer>
-    <p class="copy-right-fixed">© Toshihiro Nakachi</p>
+    <p class="copy-right-fixed">© xxxxxxxx</p>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
