--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
         </li>
       </ul>
       <ul class="address">
-        <li>TEL.080-5182-5503</li>
-        <li>info@nakachiphoto.com</li>
+        <li>TEL.xxx-xxxx-xxxx</li>
+        <li>info@xxxxxxxx.com</li>
       </ul>
     </nav>
     <div class="toggle-btn">
@@ -118,7 +118,7 @@
 
   <footer class="footer">
     <a href="index.html"><img src="image/logo-mark.svg" alt="" /><img src="image/logo-type.png" alt="" /></a>
-    <p class="copy-right">© Toshihiro Nakachi</p>
+    <p class="copy-right">© xxxxxxxxx</p>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
